5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1709_3061.log
== TEST (2019-05-02 11:15:55) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0)):
	print("Entrada invalida")
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 4
    if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0)):
                                                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:23) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0))
	print("Entrada invalida")
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 5
    print("Entrada invalida")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:32) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0)):
	print("Entrada invalida")
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 4
    if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0)):
                                                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:37) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0));
	print("Entrada invalida")
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 4
    if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0));
                                                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:59) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0)):
	print("Entrada invalida")
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 4
    if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0)):
                                                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:17:50) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0)):
	print("Entrada invalida")
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 4
    if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0)):
                                                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:18:03) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0))
	print("Entrada invalida")
			 
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 5
    print("Entrada invalida")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:18:14) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0))
	print ("Entrada invalida")
			 
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 5
    print ("Entrada invalida")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:18:32) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0)):
	print("Entrada invalida")
			 
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 4
    if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0)):
                                                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:19:53) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if(atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0):
	print("Entrada invalida")
			 
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 4
    if(atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0):
                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:20:12) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if(((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0))):
	print("Entrada invalida")
			 
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 4
    if(((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu <= 0))):
                                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:20:45) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu < 0)):
	print("Entrada invalida")
			 
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 4
    if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu < 0)):
                                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:21:00) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu < 0)):
	print("Entrada invalida")
			 
elif(atq == "TERRESTRE")
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 4
    if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu < 0)):
                                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:21:04) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu < 0))
	print("Entrada invalida")
			 
elif(atq == "TERRESTRE")
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 5
    print("Entrada invalida")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:21:23) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu < 0)):
	print("Entrada invalida")			 
elif(atq == "TERRESTRE")
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 4
    if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu < 0)):
                                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:35:08) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu < 0)):
	print("Entrada invalida")			 
elif(atq == "TERRESTRE")
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 4
    if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu < 0)):
                                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:36:10) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu < 0)):
	print("Entrada invalida")			 
elif(atq == "TERRESTRE")
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 4
    if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu < 0)):
                                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:36:41) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO")):
	print("Entrada invalida")			 
elif(atq == "TERRESTRE")
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 4
    if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO")):
                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:36:57) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO")):
	print("Entrada invalida")			 
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 4
    if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO")):
                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:23) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
			
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu < 0)):
	print("Entrada invalida")			 
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 4
    if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu < 0)):
                                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:32) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:")
if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu < 0)):
	print("Entrada invalida")			 
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	print(x)
-- ERROR:
File "XXXX", line 3
    if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu < 0)):
                                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:56) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:"))

if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu < 0)):
	print("Entrada invalida")			 
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	print(x)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:40:06) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:"))

if((atq != "TERRESTRE") or (atq != "MARITIMO") or (atq != "AEREO") or (qdu < 0)):
	print("Entrada invalida")			 
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	print(x)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:41:30) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:"))

if(qdu < 0):
	print("Entrada invalida")			 
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	print(x)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:42:08) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:"))

if(qdu < 0):
	print("Entrada invalida")			 
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	int(print(x))
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:43:03) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:"))

if(qdu < 0):
	print("Entrada invalida")			 
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	z = int(x)
	print(z)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:43:22) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:"))

if(qdu < 0):
	print("Entrada invalida")			 
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	z = int(x + 1)
	print(z)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:47:04) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:"))

if(qdu < 0):
	print("Entrada invalida")			 
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	z = int(x + 1)
	print(z)
elif(atq == "AEREO"):
	print("RHAEGAL")
	x = qdu/30
	z = int(x + 1)
	print(z)
elif(atq == "MARITIMO"):
	print("VISERION")
	x = qdu/40
	z = int(x +1)
	print(z)
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:47:27) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:"))

if(qdu < 0):
	print("Entrada invalida")			 
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	z = int(x + 1)
	print(z)
elif(atq == "AEREO"):
	print("RHAEGAL")
	x = qdu/30
	z = int(x + 1)
	print(z)
elif(atq == "MARITIMO"):
	print("VISERION")
	x = qdu/40
	z = int(x +1)
	print(z)
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:47:37) 
-- CODE:
atq = input("tipo de atq:").upper()
qdu = int(input("numero de unidades:"))

if(qdu < 0):
	print("Entrada invalida")			 
elif(atq == "TERRESTRE"):
	print("DROGON")
	x = qdu/150
	z = int(x + 1)
	print(z)
elif(atq == "AEREO"):
	print("RHAEGAL")
	x = qdu/30
	z = int(x + 1)
	print(z)
elif(atq == "MARITIMO"):
	print("VISERION")
	x = qdu/40
	z = int(x +1)
	print(z)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.201792
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
15
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
1
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
12
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
